gap card fix

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ main {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 18px; 
   padding-bottom: 20px;
   max-width: 1200px;
@@ -72,7 +72,7 @@ main {
 .card {
   width: 200px;
   height: auto;
-  /* margin: 10px; */
+  margin: 10px;
   border: 1px solid #ddd;
   border-radius: 15px;
   box-shadow: 0 0 5px rgba(0,0,0,0.1);
